<resources>
    <string name="app_name">NontonMovieKotlin</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="now_playing_desc">You can find movies currently playing in cinemas</string>
    <string name="cashless">CASHLESS</string>
    <string name="cashless_desc">Use your e-wallet for payments</string>
    <string name="presale_ticket">PRESALE TICKET</string>
    <string name="presale_ticket_desc">Get ticket for upcoming movies</string>
    <string name="get_started">GET STARTED</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="password">Password</string>
    <string name="sign_up_title">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="photo_title">Photo</string>
    <string name="save">SAVE</string>
    <string name="user">User</string>
    <string name="idr_250_000">IDR 250.000</string>
    <string name="cooming_soon">COOMING SOON</string>
    <string name="movie_title">Dunkirk</string>
    <string name="synopsis">Synopsis</string>
    <string name="movie_genre">War, Action</string>
    <string name="who_s_played">Who is Played</string>
    <string name="select_seats">SELECT SEATS</string>
    <string name="select_seats_title">Select Seats</string>
    <string name="judul_film_select_seats">Judul Film</string>
    <string name="cinema_screen">Cinema Screen</string>
    <string name="checkout_title">Checkout</string>
    <string name="checkout_now_BTN">CHECKOUT NOW</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="when">When</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_price">Total price</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="save_update_btn">SAVE UPDATE</string>
    <string name="my_wallet_title">My Wallet</string>
    <string name="balance_available">Balance Available</string>
    <string name="transaction_history">Transaction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>